namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-launchpad-staging/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-launchpad-staging
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "hub_dev"
    cloud-platform.justice.gov.uk/application: "HMPPS Launchpad"
    cloud-platform.justice.gov.uk/owner: "prisoner-content-hub-developers: thehub@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-launchpad-home-ui"
    cloud-platform.justice.gov.uk/team-name: "prisoner-content-hub-developers"
    cloud-platform.justice.gov.uk/review-after: ""
